--- a/geoMarket/res/values/strings.xml
+++ b/geoMarket/res/values/strings.xml
@@ -3,11 +3,23 @@
 
     <string name="app_name">geoMarket</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-	<string-array name="mainmenu">
+    <string name="home">home!</string>
+    <string name="profile">profile!</string>
+
+    <string-array name="mainmenu">
         <item>Home</item>
         <item>Education</item>
         <item>Family</item>
         <item>Health</item>
     </string-array>
+
+    <string name="title_activity_fragment_home">Fragment_home</string>
+    <string name="title_activity_fragment_profile">Fragment_profile</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="title_activity_fragment_offer">Fragment_offer</string>
+    <string name="offer">offer1</string>
+    <string name="title_activity_fragment_map">Fragment_map</string>
+    <string name="map">Google map</string>
+
 </resources>
